# website-monitor

./: .gitignore  LICENSE.md  README.md  bezirk.csv  build_matrix.py  check_website.py  download.py  matrix.sh  monitor.py  notifications.jsonl  pyproject.toml  requirements.txt  run.sh  update.sh  update_from_arifacts.sh  update_from_artifacts.sh  update_hash.py  update_hashes.py  website.csv  website_hash.py
csv/: bezirk.csv  bezirk_horgen.csv  jobs.csv  rueschlikon.csv  test.csv  thalwil.csv
lib/: check_website.py  download.py  utils.py  website_hash.py
tests/: conftest.py  test_check_website.py  test_download.py  test_utils.py  test_website_hash.py
texts/: al_zürich.txt  al_zürich_notify_url.txt  beat_klingelfuss_-_startseite_notify_url.txt  bezirk_ch.txt  bezirk_ch_liveticker_thalwil.txt  bezirk_ch_liveticker_thalwil_notify_url.txt  bezirk_ch_notify_url.txt  bezirk_ch_rüschlikon.txt  bezirk_ch_rüschlikon_notify_url.txt  bezirk_ch_thalwil.txt  bezirk_ch_thalwil_notify_url.txt  digitales_amtsblatt_rüschlikon.txt  digitales_amtsblatt_rüschlikon_notify_url.txt  digitales_amtsblatt_thalwil.txt  digitales_amtsblatt_thalwil_notify_url.txt  ebp_insights.txt  elena_michel_-_startseite.txt  elena_michel_-_startseite_notify_url.txt  energiestadt.txt  energiestadt_notify_url.txt  evp_bezirk_horgen.txt  evp_bezirk_horgen_notify_url.txt  evp_kanton_zürich.txt  evp_kanton_zürich_notify_url.txt  evp_thalwil.txt  evp_thalwil_notify_url.txt  fdp_bezirk_horgen.txt  fdp_bezirk_horgen_notify_url.txt  fdp_rüschlikon.txt  fdp_rüschlikon_notify_url.txt  fdp_thalwil.txt  glp_thalwil.txt  (+101 more)
(+26 files in other folders)
