[project]
name = "website-monitor"
version = "0.1.0"
description = "GitHub Action to monitor a list of websites"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docopts>=0.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "selenium>=4.27.1",
    "selenium-screenshot>=3.0.0",
]
